# rust-rest

./: .env  Cargo.toml  Insomnia_2021-05-30.json  README.md  dev-start.sh  docker-compose.yml
migrations/2021-04-22-183728_email_verification_token/: down.sql  up.sql
src/: api_error.rs  api_info.rs  cache.rs  db.rs  main.rs
src/auth/: routes.rs
src/db/: connection.rs  macros.rs  mod.rs  paginate.rs
src/email/: api.rs
src/user/: model.rs  routes.rs
