[package]
name = "rest-api"
version = "0.1.0"
authors = ["jucian0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.1.0"
listenfd = "0.3"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8.3"
serde = "1.0"
serde_json = "1.0"