[package]
name = "rest-api"
version = "0.1.0"
authors = ["jucian0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.1.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.8.3"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
diesel_migrations = "1.4"
lazy_static = "1.4"
r2d2 = "0.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.8.3"
rust-argon2 = "0.8.3"
actix-redis = { version = "0.9.2", features = ["web"] }
actix-session = "0.4.1"